headers are getting data per route

--- a/003-page-with-mock-up.conf
+++ b/003-page-with-mock-up.conf
@@ -1,9 +1,12 @@
 <VirtualHost *:80>
 	ServerName aramis.local
 	ServerAlias www.aramis.local
-	DocumentRoot /home/ev1lvvitch/workspace/page-with-post-mock-up/public
-	<Directory /home/ev1lvvitch/workspace/page-with-post-mock-up/public>
+	DocumentRoot /home/milosz/workspace/tutorials/php-tutorials/page-with-post-mock-up/public
+	<Directory /home/milosz/workspace/tutorials/php-tutorials/page-with-post-mock-up/public >
          	Require all granted
+	        AllowOverride All
+	        Order Allow,Deny
+	        Allow from All
 	</Directory>
 	ErrorLog /var/log/apache2/page-with-post-mock-up-error.log
 	CustomLog ${APACHE_LOG_DIR}/page-with-post-mock-up-error.log-access.log combined
